# quickmark

./: .gitignore  .markdownlint.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  HOMEBREW.md  README.md  cliff.toml  debug_md040_tree.rs  quickmark.toml  release.toml  rust-toolchain.toml
.claude/commands/: commit.md  port-rule.md  port_rule.md  publish.md  review.md
.githooks/: pre-push
.github/: labels.yml
.github/workflows/: branch-name-check.yml  claude.yml  crates-version-bump.yml  homebrew-update.yml  homebrew-verify.yml  issue-management.yml  release-cli.yml  release-core.yml  release-server.yml  rust.yml  sync-labels.yml
crates/quickmark/: Cargo.toml
crates/quickmark-cli/: CHANGELOG.md  Cargo.toml  README.md
crates/quickmark-cli/src/: main.rs
crates/quickmark-cli/tests/: cli_integration_tests.rs
crates/quickmark-core/: CHANGELOG.md  Cargo.toml  README.md
crates/quickmark-core/src/: lib.rs  linter.rs  test_utils.rs  tree_sitter_walker.rs
crates/quickmark-core/src/config/: mod.rs
crates/quickmark-core/src/rules/: md001.rs  md003.rs  md005.rs  md007.rs  md009.rs  md010.rs  md013.rs  md014.rs  md019.rs  md020.rs  md021.rs  md022.rs  md023.rs  md024.rs  md025.rs  md027.rs  md030.rs  md032.rs  md033.rs  md034.rs  md035.rs  md036.rs  md037.rs  md039.rs  md040.rs  md044.rs  md046.rs  md047.rs  md048.rs  md050.rs  md051.rs  md053.rs  md055.rs  md058.rs  mod.rs
crates/quickmark-server/: CHANGELOG.md  Cargo.toml  README.md
crates/quickmark-server/src/: main.rs
crates/quickmark-server/tests/: lsp_integration_tests.rs
crates/quickmark-server/tests/example_events/: 01-initialize.json  02-initialized.json  03-didOpen.json  04-diagnostic.json  06-didChange.json  11-shutdown.json  12-exit.json
crates/quickmark/src/: debug_tree.rs  main.rs
crates/quickmark/tests/: cli_integration_tests.rs
crates/quickmark_config/: Cargo.toml
crates/quickmark_config/src/: lib.rs
crates/quickmark_linter/: Cargo.toml
crates/quickmark_linter/src/: lib.rs  linter.rs  test_utils.rs  tree_sitter_walker.rs
crates/quickmark_linter/src/config/: mod.rs
crates/quickmark_linter/src/rules/: md001.rs  md003.rs  md004.rs  md005.rs  md007.rs  md009.rs  md010.rs  md011.rs  md012.rs  md013.rs  md014.rs  md018.rs  md019.rs  md020.rs  md021.rs  md022.rs  md024.rs  md025.rs  md026.rs  md027.rs  md028.rs  md029.rs  md030.rs  md031.rs  md033.rs  md035.rs  md036.rs  md038.rs  md039.rs  md040.rs  md041.rs  md042.rs  md043.rs  md044.rs  md045.rs  md046.rs  md048.rs  md049.rs  md050.rs  md051.rs  (+7 more)
crates/quickmark_linter/tests/fixtures/: quickmark.toml
crates/quickmark_server/: Cargo.toml
crates/quickmark_server/src/: main.rs
crates/quickmark_server/tests/: lsp_integration_tests.rs
crates/quickmark_server/tests/example_events/: 05-didChange.json  07-diagnostic.json  08-cancelRequest.json  09-diagnostic.json  10-didSave.json
docs/rules/: MD054.md  md003.md  md004.md  md007.md  md009.md  md010.md  md011.md  md012.md  md013.md  md014.md  md018.md  md019.md  md020.md  md021.md  md022.md  md024.md  md025.md  md026.md  md027.md  md028.md  md029.md  md030.md  md031.md  md032.md  md033.md  md035.md  md036.md  md037.md  md038.md  md039.md  md040.md  md041.md  md042.md  md043.md  md045.md  md046.md  md047.md  md048.md  md049.md  md050.md  (+6 more)
homebrew-quickmark/: .gitignore  README.md
homebrew-quickmark/Formula/: quickmark-cli.rb
pkg/: README.md
pkg/homebrew/: README.md
pkg/homebrew/Formula/: quickmark-cli.rb
scripts/: bump-version.sh  generate-changelogs.sh  latest-changes.sh  lib.sh  release.sh
scripts/benchmarks/: .markdownlint.yaml  comparison.sh  mado.toml  package-lock.json  package.json  quickmark.toml  setup.sh
src/: lib.rs  linter.rs  main.rs
src/config/: mod.rs
src/rules/: md001.rs  md003.rs  mod.rs  qm001.rs
test-samples/: .markdownlint-default.json  .markdownlint-no-headings.json  .markdownlint-stern.json  .markdownlint-strict.json  quickmark-default.toml  quickmark-md007-only.toml  quickmark-md009-only.toml  quickmark-md009-strict.toml  quickmark-md010-ignore-langs.toml  quickmark-md010-no-code.toml  quickmark-md010-only.toml  quickmark-md011-only.toml  quickmark-md012-max2.toml  quickmark-md012-only.toml  quickmark-md023-only.toml  quickmark-md025-custom-title.toml  quickmark-md025-level2.toml  quickmark-md025-only.toml  quickmark-md026-custom.toml  quickmark-md026-disabled.toml  quickmark-md026-only.toml  quickmark-md027-no-lists.toml  quickmark-md027-only.toml  quickmark-md028-only.toml  quickmark-md029-one.toml  quickmark-md029-only.toml  quickmark-md029-ordered.toml  quickmark-md029-zero.toml  quickmark-md030-custom.toml  quickmark-md030-only.toml  quickmark-md031-no-lists.toml  quickmark-md033-allowed.toml  quickmark-md033-only.toml  quickmark-md036-custom.toml  quickmark-md036-only.toml  quickmark-md037-only.toml  quickmark-md038-only.toml  quickmark-md039-only.toml  quickmark-md040-allowed-langs.toml  quickmark-md040-language-only.toml  (+212 more)
test-samples/hierarchical-test/: README.md
test-samples/hierarchical-test/cargo-project/: Cargo.toml  quickmark.toml
test-samples/hierarchical-test/cargo-project/src/: lib.md
test-samples/hierarchical-test/project-root/: README.md  quickmark.toml
test-samples/hierarchical-test/project-root/src/: api.md  quickmark.toml
test-samples/hierarchical-test/project-root/src/docs/: guide.md
test-samples/hierarchical-test/project-root/tests/: integration.md
vscode-quickmark/: .vscodeignore  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json
vscode-quickmark/scripts/: build-binaries.js  copy-local-binary.js
vscode-quickmark/src/: extension.ts
