[package]
name = "quickmark"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive"] }
comrak = "0.24.1"
serde = { version = "1.0.203", features = ["derive"] }
toml = "0.8.14"
