[package]
name = "quickmark-cli"
version = "1.0.0-alpha.1"
edition = "2021"

[[bin]]
name = "qmark"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive"] }
quickmark-core = { path = "../quickmark-core", version = "1.0.0-alpha.1" }
glob = "0.3"
rayon = "1.8"
ignore = "0.4"
walkdir = "2.4"

[dev-dependencies.quickmark-core]
path = "../quickmark-core"
version = "1.0.0-alpha.1"
features = ["testing"]

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.1"
predicates = "3.0"
