[package]
name = "quickmark-cli"
version = "1.0.0-beta.1"
edition = "2021"
description = "Lightning-fast Markdown/CommonMark linter CLI tool with tree-sitter based parsing"
license = "MIT"
authors = ["Evgeny Kropotin"]
repository = "https://github.com/ekropotin/quickmark"
homepage = "https://github.com/ekropotin/quickmark"
keywords = ["markdown", "linter", "lint", "cli"]
categories = ["command-line-utilities", "text-processing", "development-tools"]

[[bin]]
name = "qmark"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive"] }
quickmark-core = { path = "../quickmark-core", version = "1.0.0-beta.1" }
glob = "0.3"
rayon = "1.8"
ignore = "0.4"
walkdir = "2.4"

[dev-dependencies.quickmark-core]
path = "../quickmark-core"
version = "1.0.0-beta.1"
features = ["testing"]

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.1"
predicates = "3.0"
