[package]
name = "quickmark-core"
version = "1.1.0"
edition = "2021"
description = "Lightning-fast Markdown/CommonMark linter core library with tree-sitter based parsing"
license = "MIT"
authors = ["Evgeny Kropotin"]
repository = "https://github.com/ekropotin/quickmark"
homepage = "https://github.com/ekropotin/quickmark"
keywords = ["markdown", "linter", "lint", "tree-sitter"]
categories = ["text-processing", "development-tools"]

[dependencies]
anyhow = "1.0.86"
linkify = "0.10"
once_cell = "1.19"
regex = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.14"
tree-sitter = "0.25.6"
tree-sitter-md = "0.3.2"

[features]
testing = []

[dev-dependencies]
tempfile = "3.8"
