[package]
name = "quickmark-server"
version = "1.0.0-alpha.1"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
quickmark-core = { path = "../quickmark-core", version = "1.0.0-alpha.1" }
tower-lsp = "0.20.0"
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
serde_json = "1.0"
tokio-test = "0.4"
