[package]
name = "quickmark-server"
version = "1.0.0"
edition = "2021"
description = "Lightning-fast Markdown/CommonMark linter LSP server for editor integration"
license = "MIT"
authors = ["Evgeny Kropotin"]
repository = "https://github.com/ekropotin/quickmark"
homepage = "https://github.com/ekropotin/quickmark"
keywords = ["markdown", "linter", "lsp", "language-server", "editor"]
categories = ["text-processing", "development-tools", "text-editors"]

[dependencies]
anyhow = "1.0.86"
quickmark-core = { path = "../quickmark-core", version = "1.0.0-beta.2" }
tower-lsp = "0.20.0"
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
serde_json = "1.0"
tokio-test = "0.4"
