[package]
name = "quickmark"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "qmark"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive"] }
quickmark_config = { path = "../quickmark_config" }
quickmark_linter = { path = "../quickmark_linter" }
tree-sitter = "0.25.6"
tree-sitter-md = "0.3.2"

[dev-dependencies.quickmark_linter]
path = "../quickmark_linter"
features = ["testing"]

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.1"
predicates = "3.0"
